style: fix FAB overlap with content and improve Account column visual display

--- a/frontend/src/components/Layout.css
+++ b/frontend/src/components/Layout.css
@@ -9,12 +9,14 @@
   margin-left: 260px;
   width: calc(100% - 260px);
   min-height: 100vh;
+  padding-right: 100px;
 }
 
 @media (max-width: 1024px) {
   .main-content {
     margin-left: 80px;
     width: calc(100% - 80px);
+    padding-right: 100px;
   }
 }
 
@@ -22,5 +24,6 @@
   .main-content {
     margin-left: 0;
     width: 100%;
+    padding-right: 80px;
   }
 }
